# Settingseditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: FindPathie.cmake
src/: app.cpp  app.hpp  cache.cpp  cache.hpp  frame.cpp  frame.hpp  graphics_editor.cpp  graphics_editor.hpp  main.cpp  utf8.cpp  utf8.hpp
ui/: mainwindow.xrc  schemas.xml  settingseditor.fbp
